@@ -1,3 +1,6 @@
+2008-05-31 Alessandro Briosi <tsdogs@briosix.org>
+	* Ported to Qtopia4.
+
 2008-05-26 Graeme Gott <graeme@gottcode.org>
 	* Remember size of scoreboard.
 
